# internal/handlers/dto/taints.go
@@ -3,10 +3,13 @@ package dto
 import "github.com/google/uuid"
 
 type TaintResponse struct {
-	ID     uuid.UUID `json:"id"`
-	Key    string    `json:"key"`
-	Value  string    `json:"value"`
-	Effect string    `json:"effect"`
+	ID             uuid.UUID `json:"id"`
+	OrganizationID uuid.UUID `json:"organization_id"`
+	Key            string    `json:"key"`
+	Value          string    `json:"value"`
+	Effect         string    `json:"effect"`
+	CreatedAt      string    `json:"created_at,omitempty"`
+	UpdatedAt      string    `json:"updated_at,omitempty"`
 }
 
 type CreateTaintRequest struct {
